# autobio

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.obsidian/: app.json  appearance.json  core-plugins.json  hotkeys.json
.obsidian/snippets/: line-length.css  things-overrides.css
00 Inbox/: 2026-03-30_1705_battery-ridge-dr-2.md  2026-03-30_1725_battery-ridge-dr-3.md  2026-03-30_1729_battery-ridge-dr-3.md  2026-03-31_1651_battery-ridge-dr-4.md  2026-03-31_1703_battery-ridge-dr-5.md  2026-03-31_1719_battery-ridge-dr-6.md
02 Clean Transcripts/: 1975-to-early-programming-years.md  1980s-childhood-moves-and-florida-years.md  1999-2001-brooklyn-music-and-dot-com-bust.md  2005-2018-family-moves-and-work.md  2005-marriage-and-washington-avenue.md
03 Timeline/: master-timeline.md  open-questions.md
07 Chapters/: chapter-plan.md  professional-career-side-story.md
08 Prompts/: career-aside-draft.md  chapter-draft.md  cleanup.md  gap-finder.md  people-extract.md  recording-planner.md  theme-extract.md  timeline-extract.md  timeline-overview.md
99 Admin/: career-reference-linkedin-and-resumes.md  dashboard.md  gap-log.md  naming-conventions.md  next-recording-queue.md  project-principles.md  review-checklist.md  session-log.md  workflow.md
_project/: .env.example  pyproject.toml
_project/scripts/: autobio-transcribe
_project/src/autobio_pipeline/: cli.py
scripts/: autobio-transcribe
src/autobio_pipeline/: __init__.py  cli.py
