[project]
name = "autobio-pipeline"
version = "0.1.0"
description = "Local transcription pipeline for an Obsidian-based autobiography workflow."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = false
